messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging-app-green
  template:
    metadata:
      labels:
        app: django-messaging-app-green
    spec:
      containers:
      - name: django-app
        image: your_dockerhub_username/messaging_app:green  # Update with the new version's image
        ports:
        - containerPort: 8000
