messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging-app-blue  # Initially point to the blue version
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
